--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
-cffi==1.12.3
+alabaster==0.7.12
+Babel==2.7.0
+certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
-crcmod==1.7
-cryptography==2.6.1
+docutils==0.15.2
 Flask==1.1.1
-functools32==3.2.3.post2
-idna==2.7
-ipaddress==1.0.22
+freelancersdk==0.1.20
+guzzle-sphinx-theme==0.7.11
+idna==2.8
+imagesize==1.1.0
+itsdangerous==1.1.0
 Jinja2==2.10.3
-jsonschema==2.6.0
 MarkupSafe==1.1.1
-PyNaCl==1.3.0
-python-dateutil==2.8.0
-requests==2.20.1
-six==1.12.0
-texttable==0.9.1
-urllib3==1.24.2
-websocket-client==0.56.0
+packaging==19.2
+pkg-resources==0.0.0
+Pygments==2.4.2
+pyparsing==2.4.5
+pytz==2019.3
+requests==2.22.0
+six==1.13.0
+snowballstemmer==2.0.0
+Sphinx==2.2.1
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+urllib3==1.25.7
 Werkzeug==0.16.0
