--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alabaster==0.7.12
 Babel==2.7.0
 certifi==2019.9.11
+cffi==1.13.2
 chardet==3.0.4
 Click==7.0
+cryptography==2.8
 docutils==0.15.2
 Flask==1.1.1
 freelancersdk==0.1.20
@@ -14,7 +16,9 @@ Jinja2==2.10.3
 MarkupSafe==1.1.1
 packaging==19.2
 pkg-resources==0.0.0
+pycparser==2.19
 Pygments==2.4.2
+pyOpenSSL==19.1.0
 pyparsing==2.4.5
 pytz==2019.3
 requests==2.22.0
